Ajustando classes de testes